Fix overflow on the MACO VP tile.

--- a/starter-template.css
+++ b/starter-template.css
@@ -157,7 +157,7 @@ ul.member-display > li:hover {
 ul.member-display > li > a {
 	display: block;
 	padding: 5px;
-	height: 300px;
+	height: 325px;
 	width: 250px;
 	color: inherit;
 	text-decoration: none;
